@@ -1,3 +1,8 @@
+2005-05-15  Anthony Kozar  <anthonykozar@sbcglobal.net>
+
+	* Top/getstring.c: #include "cs.h", not <cs.h>
+	* Top/threads.c: Added stubs for csound*ThreadLock functions.
+
 2005-05-15  John ffitch  <jpff@codemist.co.uk>
 
 	* Top/main.c: Prototype for mytmpnam
